Fix several problems with aqua form controls: - don't disable -moz-appearance because the textfield has a transparent background - don't draw a focus border for buttons, because of an OS bug that causes ugly lines through them - make sure button text doesn't move when the button is pressed - make sure buttons don't get a dotted internal focus border - don't allow colors to be overridden on buttons for now

Also fixes dependencies in gfx/src/mac/Makefile.in. Bug 197094, r=pinkerton, sr=bzbarsky.